# scPanel

./: .readthedocs.yaml  LICENSE  README.md  poetry.toml  pyproject.toml
docs/: rtd_requirements.txt
docs/source/: conf.py  index.md
src/scpanel/: GATclassifier.py  SVMRFECV.py  palettes.py  select_cell.py  select_gene.py  settings.py  split_patient.py  train.py  utils_func.py
tests/: test_scpanel.py
tests/test_result/: Data_5fold_index.pkl  Meta_all_test.csv  Meta_all_train.csv  celltype_AUC.csv  celltype_bootstrap_stats_all.csv  clfs.pkl  rfecv_ranking_by_SVC.sav  selected_celltype.txt  sig_svm.txt  split_nfold_info.csv
tests/test_result/tmp/split_0/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv
tests/test_result/tmp/split_1/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_10/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_11/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv
tests/test_result/tmp/split_12/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_13/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_14/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_15/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_16/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_17/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_18/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_19/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv
tests/test_result/tmp/split_2/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_20/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_21/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_22/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv
tests/test_result/tmp/split_23/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv
tests/test_result/tmp/split_24/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_25/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv
tests/test_result/tmp/split_26/: processed_rna_assay_test.h5ad  processed_rna_assay_train.h5ad  split_patient_train_test_info.csv  train_test_idx.txt
tests/test_result/tmp/split_27/: train_test_idx.txt  (+3 more)
tutorials/: test_scpanel.py
(+34 files in other folders)
