[tool.poetry]
name = "scpanel"
version = "0.1.0"
description = ""
authors = ["carissaxie <yixie0822@outlook.com>"]
readme = "README.md"
packages = [{include = "scpanel", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
scanpy = "1.9.3"
scikit-learn = "1.0.2"
pandas = "2.0.3"
packaging = "23.1"
anndata = "^0.10.8"
torch = "1.13.0"
torch-geometric = "^2.5.3"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
hypothesis = "^6.111.1"


[tool.poetry.group.doc.dependencies]
sphinx = "7.4.7"
sphinx-autobuild = "2024.2.4"
myst-parser = "3.0.0"
nbsphinx = "^0.9.5"
sphinx-autoapi = "^3.2.1"
sphinx-rtd-theme = "^2.0.0"

[tool.isort]
profile = "black"
known_third_party = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
