[tool.poetry]
name = "scpanel"
version = "0.2.0"
description = ""
authors = ["carissaxie <yixie0822@outlook.com>"]
readme = "README.md"
packages = [{include = "scpanel", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
scanpy = "1.9.3"
scikit-learn = "1.0.2"
pandas = "2.0.3"
packaging = "23.1"
anndata = "^0.10.8"
torch = "1.13.0"
torch-geometric = "^2.5.3"
numpy = "1.24.4"
torch-scatter = {version = "^2.1.1+pt113cpu", source = "torch-wheels"}
torch-sparse = {version = "^0.6.17+pt113cpu", source = "torch-wheels"}
seaborn = "0.12.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
monkeytype = "^23.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
hypothesis = "^6.115.2"


[tool.poetry.group.doc.dependencies]
sphinx = "7.4.7"
sphinx-autobuild = "2024.2.4"
myst-parser = "3.0.0"
nbsphinx = "^0.9.5"
sphinx-autoapi = "^3.3.2"
sphinx-rtd-theme = "^3.0.1"

[[tool.poetry.source]]
name = "torch-wheels"
url = "https://data.pyg.org/whl/torch-1.13.0+cpu.html"
priority = "supplemental"


[tool.isort]
profile = "black"
known_third_party = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
